<resources>
    <string name="app_name">silva_parada</string>
    <string name="txt_lista_productos">Lista de Productos</string>
    <string name="txt_detalle_producto">Detalle Producto</string>
    <string name="txt_agregar">Agregar producto</string>
    <string name="txt_login">Login</string>
    <string name="txt_iniciar">Iniciar sesión</string>
    <string name="txt_correo">Correo electrónico</string>
    <string name="txt_contraseña">Contraseña</string>
    <string name="txt_registrar">Registrar</string>
    <string name="txt_nombre_producto">Nombre del producto</string>
    <string name="txt_url_producto">URL imagen</string>
    <string name="txt_precio_producto">Precio</string>
    <string name="txt_inicio">Inicio</string>
    <string name="txt_editar">Editar</string>
</resources>