<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularioActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_formulario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_nombre_producto"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/shape_edit_text_2"
            android:ems="10"
            android:hint="@string/txt_nombre_producto"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/naranja"
            android:textColorHint="@color/naranja"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_precio_producto"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_edit_text_2"
            android:ems="10"
            android:hint="@string/txt_precio_producto"
            android:inputType="numberDecimal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/naranja"
            android:textColorHint="@color/naranja"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_nombre_producto" />

        <EditText
            android:id="@+id/et_imagen_producto"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_edit_text_2"
            android:ems="10"
            android:hint="@string/txt_url_producto"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/naranja"
            android:textColorHint="@color/naranja"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_precio_producto" />

        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/shape_button_2"
            android:onClick="guardarClick"
            android:text="@string/txt_registrar"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>